hphp/hack/test/enum_supertyping/typing/duplicate_parent.bad.php.exp
File "duplicate_parent.bad.php", line 10, characters 3-3:
F cannot re-declare constant A (Typing[4389])
  File "duplicate_parent.bad.php", line 8, characters 6-6:
  because it already inherited it via E
